[package]
name = "mqtt-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttc = "0.24"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
