[package]
name = "hars-imp"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/your-repo/mqtt-agent"

# Add binary optimization profiles
[profile.release]
opt-level = "z"   # Optimize for size rather than speed
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = "abort"   # Abort on panic instead of unwinding (saves space)
strip = true      # Automatically strip symbols from the binary

[dependencies]
rumqttc = { version = "0.24", default-features = false, features = [
    "use-rustls",
] }
tokio = { version = "1.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
    "process",
    "sync",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
] }
sysinfo = { version = "0.30", default-features = false }
zbus = { version = "5.7.1", default-features = false, features = ["tokio"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
